Fix burger menu, add func close on touch off-screen, fix shop with cards

--- a/src/index.scss
+++ b/src/index.scss
@@ -350,6 +350,12 @@
 			padding-right: 20px;
 			padding-left: 20px;
 		}
+
+		&__button{
+			font-size: 24px;
+			line-height: 36px;
+			font-weight: 500;
+		}
 	}
 
 	.carousel__show {
